--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,6 @@
     "type": "project",
     "license": "BSD-3-Clause",
     "homepage": "https://www.lampace.com/",
-    "minimum-stability": "dev-master",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
