minor changes to composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,7 @@
 {
     "name": "lampace/core",
     "description": "Lampace Core.",
-    "type": "project",
     "license": "BSD-3-Clause",
     "homepage": "https://www.lampace.com/",
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "minimum-stability": "dev"
 }
