--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "lampace/core",
     "description": "Lampace Core.",
     "license": "BSD-3-Clause",
+    "version": "0.0.1",
     "homepage": "https://www.lampace.com/",
     "minimum-stability": "dev"
 }
